--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"axios": "^1.7.9",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"react-router": "^7.1.5"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
